--- a/public/css/style.css
+++ b/public/css/style.css
@@ -125,6 +125,7 @@ footer {
 
 /* container page task */
 .container-task {
+    margin-top: 3rem;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -134,17 +135,13 @@ footer {
 
 .content_task {
     flex: 1;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-around;
     align-items: center;
     box-shadow: var(--box-shadow);
     color: var(--text-color);
 }
 
 .card {
-    min-height: 60rem;
-    min-width: 30%;
+    min-height: 40rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,7 +150,7 @@ footer {
 
 .card h5 {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 3rem;
     font-weight: bold;
 }
 
