--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /* theme */
 :root {
     --font-family: 'Open Sans', sans-serif;
-    --primary: #8e44ad;
+    --primary: #1e80db;
     --dark: #2c3e50;
     --background-light: #ecf0f1;
     --text-color: #444;
@@ -127,6 +127,7 @@ footer {
 .container-task {
     margin-top: 3rem;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
@@ -166,4 +167,19 @@ footer {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+.card-title {
+    font-size: 1.5rem !important;
+}
+
+
+
+.container_task {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+    padding: 10rem;
 }
